# docs/swagger.json
@@ -86,12 +86,6 @@
                             "$ref": "#/definitions/middleware.customError"
                         }
                     },
-                    "409": {
-                        "description": "Client trying to authorize with different IP address",
-                        "schema": {
-                            "$ref": "#/definitions/middleware.customError"
-                        }
-                    },
                     "500": {
                         "description": "Internal error occured",
                         "schema": {
